Updated styling: reduced spacing, added Forum font, changed text colors, fixed video autoplay

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <!-- Featured Performance - Autoplay Video Cards (side by side) -->
                 <div class="card card-medium">
                     <div class="autoplay-video-card">
-                        <iframe class="autoplay-video" src="https://www.youtube.com/embed/c43thu5bBZY?autoplay=1&mute=1&loop=1&playlist=c43thu5bBZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="autoplay-video" id="featured-video" src="https://www.youtube.com/embed/c43thu5bBZY?autoplay=1&mute=1&loop=1&playlist=c43thu5bBZY&rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 
