Added Masterclasses card with image to Educator section

--- a/index.html
+++ b/index.html
@@ -232,8 +232,13 @@
             </div>
             
             <div class="organic-grid">
-                <!-- Patreon -->
-                <div class="card card-medium">
+                <!-- First row with Masterclasses and Patreon side by side -->
+                <div class="card card-wide" style="padding: 0; overflow: hidden; grid-column: span 8;">
+                    <img src="assets/images/Kurganov-Masterclasses.png" alt="Daniel Kurganov Masterclasses" style="width: 100%; height: 100%; object-fit: cover; display: block;">
+                </div>
+                
+                <!-- Patreon - now positioned to the right -->
+                <div class="card card-small" style="grid-column: span 4;">
                     <div class="social-card">
                         <div class="social-card-header">
                             <div class="social-profile">
@@ -249,7 +254,7 @@
                             </a>
                         </div>
                         <div class="card-content">
-                            <p class="card-text">Join my Patreon community for exclusive educational content, practice guides, and personalized feedback to help you develop your violin technique and musicality.</p>
+                            <p class="card-text">Join my Patreon community for exclusive educational content, practice guides, and personalized feedback.</p>
                         </div>
                         <div class="patreon-thumbnails">
                             <div class="patreon-thumbnail">
