--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <li><a href="#educator" class="nav-link">Educator</a></li>
                         <li><a href="#innovation" class="nav-link">Innovation</a></li>
                         <li><a href="#engineer" class="nav-link">Engineer</a></li>
+                        <li><a href="#about" class="nav-link">About</a></li>
                 </ul>
             </nav>
             </div>
