--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             
             <div class="organic-grid">
                 <!-- Featured Performance - Autoplay Video Card (full width) -->
-                <div class="card card-wide">
+                <div class="card" style="grid-column: span 12;">
                     <div class="autoplay-video-card">
                         <!-- Using loading="lazy" and a data-src attribute to defer loading -->
                         <iframe class="autoplay-video" id="featured-video" data-src="https://www.youtube.com/embed/c43thu5bBZY?autoplay=1&mute=1&loop=1&playlist=c43thu5bBZY&rel=0" frameborder="0" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
