--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 <!-- Media Gallery and Kurofune Project stacked on right side -->
                 <div style="grid-column: span 4; display: flex; flex-direction: column; gap: 2rem;">
                     <!-- Media Gallery -->
-                    <div class="card media-gallery-full" style="flex: 1;">
+                    <div class="card card-small media-gallery-full">
                         <img src="assets/images/Card Photos/Media-Gallery.jpeg" alt="Media Gallery" class="card-image-full" loading="lazy">
                         <div class="card-overlay">
                             <h3 class="card-title">Media Gallery</h3>
@@ -359,7 +359,7 @@
                     </div>
                     
                     <!-- Kurofune Project -->
-                    <div class="card" style="flex: 1;">
+                    <div class="card card-small">
                         <img src="assets/images/Card Photos/Kurofune-Ensemble.jpg" alt="Kurofune Project" class="card-image" loading="lazy">
                         <div class="card-content">
                             <h3 class="card-title">Kurofune Project (2018)</h3>
