--- a/index.html
+++ b/index.html
@@ -351,15 +351,15 @@
                 <!-- Media Gallery and Kurofune Project stacked on right side -->
                 <div style="grid-column: span 4; display: flex; flex-direction: column; gap: 2rem;">
                     <!-- Media Gallery -->
-                    <div class="card card-small media-gallery-full">
+                    <div class="card media-gallery-full" style="flex: 1;">
                         <img src="assets/images/Card Photos/Media-Gallery.jpeg" alt="Media Gallery" class="card-image-full" loading="lazy">
                         <div class="card-overlay">
                             <h3 class="card-title">Media Gallery</h3>
                         </div>
                     </div>
                     
-                    <!-- Kurofune Project -->
-                    <div class="card card-small">
+                    <!-- Kurofune Project - removed flex: 1 to prevent stretching -->
+                    <div class="card">
                         <img src="assets/images/Card Photos/Kurofune-Ensemble.jpg" alt="Kurofune Project" class="card-image" loading="lazy">
                         <div class="card-content">
                             <h3 class="card-title">Kurofune Project (2018)</h3>
