Remove Media Gallery card and make Kurofune Project card smaller

--- a/index.html
+++ b/index.html
@@ -348,23 +348,12 @@
                     </div>
                 </div>
                 
-                <!-- Media Gallery and Kurofune Project stacked on right side -->
-                <div style="grid-column: span 4; display: flex; flex-direction: column; gap: 2rem;">
-                    <!-- Media Gallery -->
-                    <div class="card media-gallery-full" style="flex: 1;">
-                        <img src="assets/images/Card Photos/Media-Gallery.jpeg" alt="Media Gallery" class="card-image-full" loading="lazy">
-                        <div class="card-overlay">
-                            <h3 class="card-title">Media Gallery</h3>
-                        </div>
-                    </div>
-                    
-                    <!-- Kurofune Project - removed flex: 1 to prevent stretching -->
-                    <div class="card">
-                        <img src="assets/images/Card Photos/Kurofune-Ensemble.jpg" alt="Kurofune Project" class="card-image" loading="lazy">
-                        <div class="card-content">
-                            <h3 class="card-title">Kurofune Project (2018)</h3>
-                            <p class="card-text">A collaborative project blending traditional Japanese music with Western classical forms.</p>
-                        </div>
+                <!-- Kurofune Project (Small) -->
+                <div class="card" style="grid-column: span 2; max-width: 220px;">
+                    <img src="assets/images/Card Photos/Kurofune-Ensemble.jpg" alt="Kurofune Project" class="card-image" loading="lazy" style="height: 120px;">
+                    <div class="card-content" style="padding: 0.75rem;">
+                        <h3 class="card-title" style="font-size: 0.9rem; margin-bottom: 0.3rem;">Kurofune Project</h3>
+                        <p class="card-text" style="font-size: 0.75rem;">Japanese-Western music collaboration.</p>
                     </div>
                 </div>
             </div>
