--- a/index.html
+++ b/index.html
@@ -348,12 +348,12 @@
                     </div>
                 </div>
                 
-                <!-- Kurofune Project (Small) -->
-                <div class="card" style="grid-column: span 2; max-width: 220px;">
-                    <img src="assets/images/Card Photos/Kurofune-Ensemble.jpg" alt="Kurofune Project" class="card-image" loading="lazy" style="height: 120px;">
-                    <div class="card-content" style="padding: 0.75rem;">
-                        <h3 class="card-title" style="font-size: 0.9rem; margin-bottom: 0.3rem;">Kurofune Project</h3>
-                        <p class="card-text" style="font-size: 0.75rem;">Japanese-Western music collaboration.</p>
+                <!-- Kurofune Project - short card -->
+                <div class="card" style="grid-column: span 4; max-height: 200px; overflow: hidden;">
+                    <img src="assets/images/Card Photos/Kurofune-Ensemble.jpg" alt="Kurofune Project" class="card-image" style="height: 120px; object-fit: cover;" loading="lazy">
+                    <div class="card-content" style="padding: 1rem;">
+                        <h3 class="card-title" style="font-size: 1.2rem; margin-bottom: 0.3rem;">Kurofune Project (2018)</h3>
+                        <p class="card-text" style="font-size: 0.9rem; margin: 0;">A collaborative project blending Japanese and Western classical music.</p>
                     </div>
                 </div>
             </div>
