Increase Kurofune Project card height for better balance

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 </div>
                 
                 <!-- Kurofune Project -->
-                <div class="card card-small" style="grid-column: span 4; max-height: 300px; align-self: start;">
+                <div class="card card-small" style="grid-column: span 4; max-height: 500px;">
                     <img src="assets/images/Card Photos/Kurofune-Ensemble.jpg" alt="Kurofune Project" class="card-image" loading="lazy">
                     <div class="card-content">
                         <h3 class="card-title">Kurofune Project (2018)</h3>
