Make Upcoming Events card narrower

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 </div>
                 
                 <!-- Upcoming Concerts (moved from About section) -->
-                <div class="card card-wide">
+                <div class="card" style="grid-column: span 7;">
                     <div class="card-content">
                         <h3 class="card-title">Upcoming Concerts</h3>
                         
