Update Instagram card to show two reels with stylish thumbnails

--- a/index.html
+++ b/index.html
@@ -331,10 +331,21 @@
                                     Follow
                                 </a>
                             </div>
-                            <div class="instagram-grid">
-                                <div class="social-post">
-                                    <img src="assets/images/Card Photos/Instagram-Card-Image.jpg" alt="Instagram Image" loading="lazy">
-                                </div>
+                            <div class="instagram-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 8px; padding: 0 12px 12px 12px;">
+                                <a href="https://www.instagram.com/p/DG5oiztAbfm/" target="_blank" class="instagram-reel">
+                                    <div class="reel-thumbnail">
+                                        <div class="play-icon">
+                                            <i class="fas fa-play"></i>
+                                        </div>
+                                    </div>
+                                </a>
+                                <a href="https://www.instagram.com/p/DHb6QmgSIAK/" target="_blank" class="instagram-reel">
+                                    <div class="reel-thumbnail">
+                                        <div class="play-icon">
+                                            <i class="fas fa-play"></i>
+                                        </div>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
