Update Instagram card with two stacked thumbnails and improved styling

--- a/index.html
+++ b/index.html
@@ -331,20 +331,12 @@
                                     Follow
                                 </a>
                             </div>
-                            <div class="instagram-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 8px; padding: 0 12px 12px 12px;">
-                                <a href="https://www.instagram.com/p/DG5oiztAbfm/" target="_blank" class="instagram-reel">
-                                    <div class="reel-thumbnail">
-                                        <div class="play-icon">
-                                            <i class="fas fa-play"></i>
-                                        </div>
-                                    </div>
+                            <div class="instagram-grid" style="display: flex; flex-direction: column; gap: 10px;">
+                                <a href="https://www.instagram.com/p/DG5oiztAbfm/" target="_blank" class="social-post">
+                                    <img src="assets/images/Card Photos/Instagram-Card-Image.jpg" alt="After a dream... Instagram Reel" loading="lazy" style="width: 100%; border-radius: 8px;">
                                 </a>
-                                <a href="https://www.instagram.com/p/DHb6QmgSIAK/" target="_blank" class="instagram-reel">
-                                    <div class="reel-thumbnail">
-                                        <div class="play-icon">
-                                            <i class="fas fa-play"></i>
-                                        </div>
-                                    </div>
+                                <a href="https://www.instagram.com/p/DHb6QmgSIAK/" target="_blank" class="social-post">
+                                    <img src="assets/images/Card Photos/Instagram-Card-Image.jpg" alt="Instagram Reel" loading="lazy" style="width: 100%; border-radius: 8px;">
                                 </a>
                             </div>
                         </div>
