Update images and index.html for optimized display

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Kurganov | Violinist, Educator, Innovator</title>
+    <title>Daniel Kurganov | Violinist, Educator</title>
     
     <!-- Preload critical resources -->
     <link rel="preload" href="assets/images/kurganov-headshot.jpg" as="image">
