Add minimalist CV download and Press Kit buttons to hero section

--- a/index.html
+++ b/index.html
@@ -33,28 +33,42 @@
             <div class="header-right">
                 <a href="#contact" class="cta-button">Contact</a>
                 <button class="mobile-menu-toggle">
-                    <i class="fas fa-bars"></i>
+                    <span class="menu-icon"></span>
                 </button>
             </div>
         </div>
     </header>
 
-    <!-- Mobile Menu -->
+    <!-- Updated Mobile Menu with overlay -->
     <div class="mobile-menu">
         <button class="mobile-menu-close">
             <i class="fas fa-times"></i>
         </button>
-            <ul class="mobile-nav-list">
+        <ul class="mobile-nav-list">
             <li><a href="#violinist" class="mobile-nav-link">Violinist</a></li>
             <li><a href="#educator" class="mobile-nav-link">Educator</a></li>
             <li><a href="#technology" class="mobile-nav-link">Technology</a></li>
             <li><a href="#about" class="mobile-nav-link">About</a></li>
             <li><a href="#contact" class="mobile-nav-link">Contact</a></li>
-            </ul>
+        </ul>
+        
+        <div class="mobile-social-links">
+            <a href="https://www.youtube.com/@DanielKurganov" class="mobile-social-link" target="_blank">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="https://www.instagram.com/violinvention" class="mobile-social-link" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.patreon.com/artiststechnique" class="mobile-social-link" target="_blank">
+                <i class="fab fa-patreon"></i>
+            </a>
+        </div>
+        
         <div class="mobile-menu-footer">
             <p>&copy; 2025 Daniel Kurganov</p>
         </div>
     </div>
+    <div class="mobile-menu-overlay"></div>
 
     <!-- Hero Section -->
     <section class="hero">
