Refine hero section for mobile (<768px): use specific image, make image background, add blur on scroll, adjust text/button colors and positions, adjust header transition

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
     <section class="hero">
         <div class="hero-content">
             <div class="hero-image-container">
-                <img src="assets/images/kurganov-headshot.jpg" alt="Daniel Kurganov with violin" class="hero-image">
+                <img src="assets/images/kurganov-headshot.jpg" alt="Daniel Kurganov with violin - Desktop" class="hero-image hero-image-desktop">
+                <img src="assets/images/kurganov-headshot2.jpg" alt="Daniel Kurganov with violin - Mobile" class="hero-image hero-image-mobile" loading="lazy">
             </div>
             <!-- Button container to hold both buttons side by side -->
             <div class="hero-buttons">
