--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </ul>
                     </li>
                     <li><a href="#educator" class="nav-link">Educator</a></li>
-                    <li><a href="#technology" class="nav-link">Technology</a></li>
+                    <li><a href="#innovation" class="nav-link">Innovation</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                 </ul>
             </nav>
@@ -52,7 +52,7 @@
             <li><a href="#violinist" class="mobile-nav-link">Violinist</a></li>
             <li><a href="#upcoming-events" class="mobile-nav-link">Events</a></li
             <li><a href="#educator" class="mobile-nav-link">Educator</a></li>
-            <li><a href="#technology" class="mobile-nav-link">Technology</a></li>
+            <li><a href="#innovation" class="mobile-nav-link">Innovation</a></li>
             <li><a href="#about" class="mobile-nav-link">About</a></li>
             <li><a href="#contact" class="mobile-nav-link">Contact</a></li>
         </ul>
@@ -524,14 +524,14 @@
         </div>
     </section>
 
-    <!-- Technology Section (combined Innovation and Engineer) -->
-    <section id="technology" class="section">
+    <!-- Innovation Section (combined Innovation and Engineer) -->
+    <section id="innovation" class="section">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Technology</h2>
+                <h2 class="section-title">Innovation</h2>
             </div>
             
-            <!-- Tetris Block for Technology Cards -->
+            <!-- Tetris Block for Innovation Cards -->
             <div class="block block-tetris">
                 <!-- Arco AI -->
                 <div class="card" data-url="https://www.violinvention.com">
