--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             <!-- Text Block for Intro -->
             <div class="block block-text">
                 <div class="educator-intro">
-                    <p>My mission is to empower others to bridge the gap between their fingers and their hearts. Standing in the direct lineage of Jascha Heifetz, I see the great tradition of violin playing and incredible artistic nuance achieved in the 20th century as both a science and an art—something to be studied, preserved, and continually reimagined. My own late start on the violin and the setbacks I faced compelled me to dissect each element of technique, artistry, and learning, ultimately shaping a teaching philosophy that balances deep study of the masters with attention to each student's unique musical voice.</p>
+                    <p>My mission is to empower others to bridge the gap between the fingers and the heart. Standing in the direct lineage of Jascha Heifetz, I see the great tradition of violin playing and incredible artistic nuance achieved in the 20th century as both a science and an art—something to be studied, preserved, and continually reimagined. My own late start on the violin and the setbacks I faced compelled me to dissect each element of technique, artistry, and learning, ultimately shaping a teaching philosophy that balances deep study of the masters with attention to each student's unique musical voice.</p>
                 </div>
             </div>
             
