chore: update files

--- a/index.html
+++ b/index.html
@@ -410,7 +410,10 @@
             <!-- Text Block for Intro -->
             <div class="block block-text">
                 <div class="educator-intro">
-                    <p>My mission is to empower others to bridge the gap between the fingers and the heart. Standing in the direct lineage of Jascha Heifetz, I see the great tradition of violin playing and incredible artistic nuance achieved in the 20th century as both a science and an art—something to be studied, preserved, and continually reimagined. My own late start on the violin and the setbacks I faced compelled me to dissect each element of technique, artistry, and learning, ultimately shaping a teaching philosophy that balances deep study of the masters with attention to each student's unique musical voice.</p>
+                    <p>My mission is to empower others to bridge the gap between the fingers and the heart. Standing in the direct lineage of Jascha Heifetz, I see the great tradition of violin playing and incredible artistic nuance achieved in the 20th century as both a science and an art—something to be studied, preserved, and continually reimagined.</p>
+                    <p>Central to my method is the principle that the student is not a container needing to be filled, but rather a lightbulb needing to be turned on. Therefore, I focus first and foremost on teaching students how to think, not what to think.</p>
+                    <p>My own late start on the violin and the setbacks I faced compelled me to dissect each element of technique, artistry, and learning. This background, along with intense study of technique and different styles, allows me to offer students practical 'tools' for their musical 'toolbox,' enhancing their sensitivity to sound and promoting an efficient workflow. My approach alternates between equipping students with these tools and cultivating the understanding that 'feeling is knowing.'</p>
+                    <p>There is nothing more rewarding for me than making a student aware of their gifts and showing them how to nurture them, ultimately empowering them to become self-sufficient artists and rendering my 'job' obsolete."</p>
                 </div>
             </div>
             
