chore: update files

--- a/intensive.html
+++ b/intensive.html
@@ -723,7 +723,7 @@
                     <div class="bvi-faculty-content">
                         <h3 class="bvi-faculty-name">JenTao Yu</h3>
                         <p class="bvi-faculty-position">Collaborative Pianist</p>
-                        <p>Dr. JenTao Yu, praised by critics like David Dubal (NY Times) and artists like Martha Argerich, is an accomplished Taiwanese pianist. He won First Prize at the 2018 Concert Artists International Virtuoso Competition and concertizes internationally in venues like Carnegie Hall's Weill Recital Hall, Juilliard, and major halls in Beijing and Taipei.</p>
+                        <p>Dr. JenTao Yu, praised by critics like David Dubal (NY Times) and artists like Martha Argerich, is an highly accomplished Taiwanese pianist. He won First Prize at the 2018 Concert Artists International Virtuoso Competition and concertizes internationally in venues like Carnegie Hall's Weill Recital Hall, Juilliard, and major halls in Beijing and Taipei.</p>
                         <p>Dr. Yu actively engages with the community through outreach concerts and has participated in numerous international festivals. A dedicated educator, he holds MM and DMA degrees from Manhattan School of Music and Boston University, respectively.</p>
                     </div>
                 </div>
