feat: Add favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Kurganov | Violinist, Educator</title>
     
+    <link rel="icon" type="image/png" href="assets/favicon-kurganov.png">
+
     <!-- Preload critical resources -->
     <link rel="preload" href="assets/images/kurganov-headshot.jpg" as="image">
     <link rel="preload" href="assets/css/styles.css" as="style">
