--- a/intensive.html
+++ b/intensive.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boston Violin Intensive | Daniel Kurganov</title>
     
+    <link rel="icon" type="image/png" href="assets/favicon-kurganov.png">
+
     <!-- Preload critical resources -->
     <link rel="preload" href="assets/css/styles.css" as="style">
     <link rel="preload" href="assets/js/main.js" as="script">
