feat: Add Open Graph meta tags for social media previews

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Kurganov | Violinist, Educator</title>
     
+    <!-- Open Graph / Facebook Card Meta Tags -->
+    <meta property="og:title" content="Daniel Kurganov | Violin, Education, Innovation">
+    <meta property="og:description" content="The new central hub for my work, where music, education, and innovation converge.">
+    <meta property="og:image" content="https://www.kurganov.org/assets/images/kurganov-headshot.jpg"> 
+    <meta property="og:url" content="https://www.kurganov.org">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Daniel Kurganov | Violin, Education, Innovation">
+    <meta name="twitter:description" content="The new central hub for my work, where music, education, and innovation converge.">
+    <meta name="twitter:image" content="https://www.kurganov.org/assets/images/kurganov-headshot.jpg"> 
+    
     <link rel="icon" type="image/png" href="assets/favicon-kurganov.png">
 
     <!-- Preload critical resources -->
