Fix: Correct favicon path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="The new central hub for my work, where music, education, and innovation converge.">
     <meta name="twitter:image" content="https://www.kurganov.org/assets/images/kurganov-headshot-02.jpg"> 
     
-    <link rel="icon" type="image/png" href="assets/favicon-kurganov.png">
+    <link rel="icon" type="image/png" href="assets/images/favicon-kurganov.png">
 
     <!-- Preload critical resources -->
      <link rel="preload" href="assets/images/kurganov-headshot.jpg" as="image">
