Add violin sale page, images, and Latest section; update social preview meta tags

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </button>
         <ul class="mobile-nav-list">
             <li><a href="#violinist" class="mobile-nav-link">Violinist</a></li>
-            <li><a href="#upcoming-events" class="mobile-nav-link">Events</a></li
+            <li><a href="#upcoming-events" class="mobile-nav-link">Events</a></li>
             <li><a href="#educator" class="mobile-nav-link">Educator</a></li>
             <li><a href="#innovation" class="mobile-nav-link">Innovation</a></li>
             <li><a href="#about" class="mobile-nav-link">About</a></li>
@@ -109,6 +109,26 @@
         </div>
         <div class="scroll-indicator">
             SCROLL TO EXPLORE
+        </div>
+    </section>
+
+    <!-- Latest Section -->
+    <section id="latest" class="section" style="margin-bottom: 0; padding-bottom: 0;">
+        <div class="container">
+            <div class="section-header" style="padding-top: 4rem;">
+                <h2 class="section-title">Latest</h2>
+            </div>
+            
+            <div class="block block-events">
+                <!-- Violin For Sale -->
+                <a href="violinsale.html" class="card">
+                    <img data-src="violinimages/ViolinSale.jpg" alt="2013 Andrew Ryan del Gesu model violin" class="card-image" loading="lazy">
+                    <div class="card-content">
+                        <h3 class="card-title">My Violin For Sale</h3>
+                        <p class="card-text">I am selling my 2013 Andrew Ryan del Gesu model violin which I have used exclusively since it was made.</p>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
 
