--- a/violinsale.html
+++ b/violinsale.html
@@ -493,7 +493,7 @@
                 <!-- Specifications Column (2/3 width) -->
                 <div class="lg:col-span-2 fade-in fade-in-delay-1 px-6 md:px-8 lg:px-12">
                     <div>
-                        <h2 class="section-title elegant-font gold-accent">Instrument Specifications</h2>
+                        <h2 class="section-title elegant-font gold-accent">Details</h2>
                         
                         <div class="mb-8 px-4 md:px-6">
                             <h3 class="text-2xl font-semibold mb-4 elegant-font">2013 Andrew Ryan Violin</h3>
@@ -504,7 +504,7 @@
                                 <p><strong>Construction:</strong> Back is made from one piece of slab sawn maple. The sides are made from quarter sawn maple. The Scroll is made of quarter sawn maple. The top is made of two pieces of spruce of fine grain.</p>
                                 <p><strong>Finish:</strong> Varnish is reddish brown with tasteful antiquing. Particularly attractive is the subtle varnish crackle, which is not easy to replicate.</p>
                                 <p><strong>Provenance:</strong> Played from 2013 by Daniel Kurganov</p>
-                                <p><strong>Sound Qualities:</strong> Chocolate. Great depth and clarity. Dark, broad and powerful G string.</p>
+                                <p><strong>Sound Qualities:</strong> Chocolate with spice. Great depth and clarity. Dark, broad and powerful G string.</p>
                                 <p><strong>Dimensions:</strong> Length 354mm, Upper Bout 165mm, Middle Bout 114mm, Lower Bout 205mm</p>
                             </div>
                         </div>
@@ -519,7 +519,7 @@
     <!-- Gallery Section -->
     <section class="py-20 px-4 bg-gradient-to-br from-white to-amber-50">
         <div class="max-w-7xl mx-auto">
-            <h2 class="section-title elegant-font text-center gold-accent fade-in">Instrument Gallery</h2>
+            <h2 class="section-title elegant-font text-center gold-accent fade-in">Gallery</h2>
             
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div class="fade-in fade-in-delay-1 hover-lift">
